more css planning

--- a/src/UI/molecules/button/button.module.scss
+++ b/src/UI/molecules/button/button.module.scss
@@ -1,15 +1,17 @@
 .primaryButton {
+  display: inline-block;
+  padding: 2px 5px;
+  margin: 5px 2px;
   border: solid 1px;
   border-radius: 0;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 0.65rem;
+
+  font-size: 10px;
   letter-spacing: 3px;
-  padding: 0.1rem 0.5rem;
-  margin: 0.5rem 0.2rem;
-  line-height: 2rem;
-  background-color: transparent;
+  line-height: var(--line-m);
   font-weight: 900;
+
+  background-color: transparent;
+  color: var(--neutral-900);
 
   &:enabled:hover {
     color: rgb(64, 167, 156);
@@ -25,4 +27,6 @@
     border-color: var(--neutral-200);
     color: var(--neutral-500);
   }
+
+  cursor: pointer;
 }
