--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,4 +1,17 @@
 :root {
+  /* Colours */
+
+  --neutral-50: #fafafa;
+  --neutral-100: #f5f5f5;
+  --neutral-200: #e5e5e5;
+  --neutral-300: #d4d4d4;
+  --neutral-400: #a3a3a3;
+  --neutral-500: #737373;
+  --neutral-600: #525252;
+  --neutral-700: #404040;
+  --neutral-800: #262626;
+  --neutral-900: #171717;
+
   --background-color-body: #2e3842;
 
   --button-background: transparent;
@@ -16,6 +29,7 @@
   --banner-background: #101010;
   --banner-text-color: #fff;
 
+  --font-family: "Raleway", sans-serif;
   /* text size and weight */
   --text-xs: 12px;
   --line-xs: 14px;
