--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -29,7 +29,7 @@
   --banner-background: #101010;
   --banner-text-color: #fff;
 
-  --font-family: "Raleway", sans-serif;
+  --font-family: Raleway, sans-serif;
   /* text size and weight */
   --text-xs: 12px;
   --line-xs: 14px;
