--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -18,7 +18,7 @@
   --button-active-background: #d4d4d4;
   --button-hover-color: #40a79c;
 
-  --contact-section-background: #1d242a;
+  --nav-background: #1d242a;
 
   --projects-header-container-background: #1d242a;
   --project-left-background: #ededed;
