--- a/src/app/components/HeroSection/HeroSection.module.scss
+++ b/src/app/components/HeroSection/HeroSection.module.scss
@@ -8,3 +8,12 @@
     width: 1176px;
   }
 }
+.overlay {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  color: #ffffff;
+}
