--- a/src/app/components/Navbar/Navbar.module.scss
+++ b/src/app/components/Navbar/Navbar.module.scss
@@ -1,4 +1,11 @@
 .nav {
   background-color: var(--nav-background);
-  color: white;
+  color: var(--neutral-0);
+  position: sticky;
+  top: 0;
+  border-bottom: 1px solid var(--neutral-0);
+  z-index: 1;
+}
+.listOptions {
+  list-style: none;
 }
