basic navbar done for now

--- a/src/app/components/Navbar/Navbar.module.scss
+++ b/src/app/components/Navbar/Navbar.module.scss
@@ -9,7 +9,7 @@
 .listOptions {
   list-style: none;
 }
-.icon {
-  height: 40px;
-  width: 40px;
-}
+// .icon {
+//   height: 40px;
+//   width: 40px;
+// }
