--- a/src/app/components/Banner/Banner.module.scss
+++ b/src/app/components/Banner/Banner.module.scss
@@ -1,6 +1,25 @@
 .banner {
   display: flex;
   justify-content: center;
-  color: white;
-  background-color: red;
+  align-items: center;
+  padding: 20px 0px;
+  color: var(--neutral-0);
+  border-top: solid 1px var(--neutral-0);
+}
+.banner::before,
+.banner:after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  top: 50%;
+  width: 20%;
+  border-top: solid 1px white;
+}
+.banner::before {
+  left: 0;
+  margin-right: 10px;
+}
+.banner:after {
+  right: 0;
+  margin-left: 10px;
 }
