--- a/src/app/components/Banner/Banner.module.scss
+++ b/src/app/components/Banner/Banner.module.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px 0px;
+  height: 10vh;
   color: var(--neutral-0);
 }
 .banner::before,
