project views progress

--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -22,7 +22,7 @@
 
   --projects-header-container-background: #1d242a;
   --project-left-background: #ededed;
-  --project-right-background: #2a3540;
+  --project-dark: #2a3540;
 
   --footer-background: #1d242a;
 
