--- a/src/app/components/ProjectDisplay/ProjectDisplay.module.scss
+++ b/src/app/components/ProjectDisplay/ProjectDisplay.module.scss
@@ -12,7 +12,7 @@
 }
 .dark {
   background-color: var(--project-dark);
-  color: white;
+  color: var(--neutral-0);
 }
 .contentContainer {
   display: flex;
@@ -24,6 +24,9 @@
 }
 .projectHeader {
   text-decoration: underline;
+  font-weight: var(--text-medium);
+  font-size: var(--text-xxl);
+  margin: 20px 0;
 }
 .imageContainer {
   text-align: center;
@@ -31,6 +34,8 @@
 .image {
   padding: 1px;
   border: solid 1px #8a8a8a;
+  max-width: 80%;
+  height: auto;
 }
 .projectDescription {
   margin: 0 auto;
@@ -38,5 +43,13 @@
   text-align: justify;
   font-size: var(--text-l);
   line-height: var(--line-xxl);
-  max-width: 80%;
+  max-width: 85%;
+}
+.buttonContainer {
+  display: flex;
+  // background-color: yellow;
+  // border: 2px solid red;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
 }
