--- a/src/UI/molecules/button/button.module.scss
+++ b/src/UI/molecules/button/button.module.scss
@@ -1,4 +1,4 @@
-.primaryButton {
+.button {
   display: inline-block;
   padding: 4px 8px;
   margin: 5px 2px;
@@ -7,20 +7,20 @@
 
   font-size: 10px;
   letter-spacing: 3px;
-  line-height: var(--line-m);
-  font-weight: 900;
+  line-height: var(--line-l);
+  font-weight: 300;
 
   background-color: transparent;
   color: var(--neutral-900);
 
   &:enabled:hover {
-    color: rgb(64, 167, 156);
+    color: var(--button-hover-color);
   }
 
-  &:enabled:active {
-    transform: translateY(1px);
-    background-color: #d4d4d4;
-  }
+  // &:enabled:active {
+  //   transform: translateY(1px);
+  //   background-color: #d4d4d4;
+  // }
 
   &:disabled {
     background-color: var(--neutral-200);
@@ -29,4 +29,14 @@
   }
 
   cursor: pointer;
+}
+
+.primaryButton {
+  @extend .button;
+  color: var(--neutral-900);
+}
+
+.secondaryButton {
+  @extend .button;
+  color: var(--neutral-0);
 }
