--- a/src/app/components/ProjectDisplay/ProjectDisplay.module.scss
+++ b/src/app/components/ProjectDisplay/ProjectDisplay.module.scss
@@ -26,7 +26,7 @@
   text-decoration: underline;
   font-weight: var(--text-medium);
   font-size: var(--text-xxl);
-  margin: 20px 0;
+  margin: 40px 0;
 }
 .imageContainer {
   text-align: center;
@@ -38,17 +38,16 @@
   height: auto;
 }
 .projectDescription {
-  margin: 0 auto;
+  margin: 5px auto;
   padding: 6px;
   text-align: justify;
-  font-size: var(--text-l);
+  font-size: var(--text-s);
   line-height: var(--line-xxl);
   max-width: 85%;
 }
 .buttonContainer {
   display: flex;
-  // background-color: yellow;
-  // border: 2px solid red;
+  margin: 0 0 20px 0;
   padding: 10px;
   align-items: center;
   justify-content: center;
