--- a/src/app/components/Banner/Banner.module.scss
+++ b/src/app/components/Banner/Banner.module.scss
@@ -5,6 +5,7 @@
   padding: 20px 0px;
   height: 10vh;
   color: var(--neutral-0);
+  background-color: var(--nav-background);
 }
 .banner::before,
 .banner:after {
