proj display responsiveness done

--- a/src/app/components/Banner/Banner.module.scss
+++ b/src/app/components/Banner/Banner.module.scss
@@ -31,3 +31,15 @@
 .bottomBorder {
   border-bottom: solid 1px var(--neutral-0);
 }
+@media (min-width: 1440px) {
+  .banner::before,
+  .banner:after {
+    width: 25%;
+  }
+}
+@media (min-width: 1920px) {
+  .banner::before,
+  .banner:after {
+    width: 20%;
+  }
+}
