--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -47,6 +47,7 @@
   --text-xxxl: 24px;
   --line-xxxl: 28px;
 
+  --text-thin: 300;
   --text-normal: 400;
   --text-medium: 500;
   --text-semibold: 600;
