--- a/src/app/components/IntroTitle/IntroTitle.module.scss
+++ b/src/app/components/IntroTitle/IntroTitle.module.scss
@@ -23,7 +23,7 @@
 
 .name {
   font-size: var(--text-xxxl);
-  font-weight: var(--text-medium);
+  font-weight: var(--text-normal);
   z-index: 2;
   animation: fadeInOut 1s ease-in-out 1.5s forwards;
 }
