--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -47,6 +47,11 @@
   --text-xxxl: 24px;
   --line-xxxl: 28px;
 
+  --text-header: 30px;
+  --line-header: 34px;
+
+  --text-thinnest: 100;
+  --text-thinner: 200;
   --text-thin: 300;
   --text-normal: 400;
   --text-medium: 500;
