--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -21,7 +21,7 @@
   --nav-background: #1d242a;
 
   --projects-header-container-background: #1d242a;
-  --project-left-background: #ededed;
+  --project-light: #ededed;
   --project-dark: #2a3540;
 
   --footer-background: #1d242a;
