--- a/src/app/components/HeroSection/HeroSection.module.scss
+++ b/src/app/components/HeroSection/HeroSection.module.scss
@@ -6,6 +6,14 @@
     opacity: 1;
   }
 }
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(70deg);
+  }
+  100% {
+    transform: scale(0.5) translateY(-100px) rotate(360deg);
+  }
+}
 
 .mainWrapper {
   width: 100%;
@@ -18,6 +26,13 @@
   }
 }
 
+.heroSection {
+  height: 80vh;
+  background-color: var(--project-dark);
+  position: relative;
+  margin: 8px;
+}
+
 .overlay {
   position: absolute;
   inset: 0;
@@ -27,13 +42,8 @@
   color: #ffffff;
 }
 
-.heroSection {
-  height: 80vh;
-  background-color: var(--project-dark);
-  position: relative;
-}
-
 .headerContainer {
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,24 +63,32 @@
   font-size: var(--text-s);
   margin: 5px 0px 0px 2px;
 }
-.nav {
+
+.contact {
   margin-top: 50px;
 }
-.nav ol {
+
+.contact ol {
   display: flex;
   flex-direction: column;
   row-gap: 15px;
   list-style: none;
   padding: 0 0 0 10px;
 }
-.nav ol li {
+
+.contact ol li a {
   font-size: var(--text-s);
   font-weight: var(--text-semibold);
   cursor: pointer;
   &:hover {
     color: var(--button-hover-color);
   }
+  &:active {
+    color: var(--button-hover-color);
+    transform: translateY(1px);
+  }
 }
+
 .profileContainer {
   position: absolute;
   white-space: nowrap;
@@ -79,6 +97,7 @@
   opacity: 0;
   animation: fadeIn 1s ease-in-out 2.8s forwards; /* Fade in after 2.8 seconds */
 }
+
 .profileDescription {
   display: flex;
   flex-direction: column;
@@ -86,13 +105,19 @@
   font-weight: var(--text-semibold);
 }
 
+.profileDescription span {
+  line-height: var(--line-l);
+}
+
 // Background Animation
 .bubblesWrapper {
   height: 100%;
   width: 100%;
-  // background:var();
   position: absolute;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out 2.8s forwards;
 }
+
 .bubblesWrapper h1 {
   top: 50%;
   left: 50%;
@@ -106,6 +131,7 @@
   font-weight: 888;
   text-transform: uppercase;
 }
+
 .bubblesWrapper div {
   height: 60px;
   width: 60px;
@@ -116,6 +142,7 @@
   left: 10%;
   animation: 4s linear infinite;
 }
+
 div .dot {
   height: 5px;
   width: 5px;
@@ -125,86 +152,105 @@ div .dot {
   top: 20%;
   right: 20%;
 }
+
 .bubblesWrapper div:nth-child(1) {
-  top: 20%;
+  top: 60%;
   left: 20%;
   animation: animate 8s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(2) {
   top: 60%;
   left: 80%;
   animation: animate 10s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(3) {
   top: 40%;
   left: 40%;
-  animation: animate 3s linear infinite;
+  animation: animate 7s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(4) {
   top: 66%;
   left: 30%;
   animation: animate 7s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(5) {
   top: 90%;
   left: 10%;
   animation: animate 9s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(6) {
   top: 30%;
   left: 60%;
-  animation: animate 5s linear infinite;
+  animation: animate 9s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(7) {
   top: 70%;
   left: 20%;
   animation: animate 8s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(8) {
-  top: 75%;
+  top: 35%;
   left: 60%;
   animation: animate 10s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(9) {
   top: 50%;
   left: 50%;
   animation: animate 6s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(10) {
   top: 45%;
   left: 20%;
   animation: animate 10s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(11) {
   top: 10%;
   left: 90%;
   animation: animate 9s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(12) {
   top: 20%;
   left: 70%;
   animation: animate 7s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(13) {
-  top: 20%;
-  left: 20%;
+  top: 90%;
+  left: 30%;
   animation: animate 8s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(14) {
-  top: 60%;
+  top: 75%;
   left: 5%;
   animation: animate 6s linear infinite;
 }
+
 .bubblesWrapper div:nth-child(15) {
-  top: 90%;
+  top: 15%;
   left: 80%;
-  animation: animate 9s linear infinite;
+  animation: animate 8s linear infinite;
 }
-@keyframes animate {
-  0% {
-    transform: scale(0) translateY(0) rotate(70deg);
+@media (min-width: 1200px) {
+  .profileDescription span {
+    line-height: var(--line-xl);
+    font-size: var(--text-l);
   }
-  100% {
-    transform: scale(0.5) translateY(-100px) rotate(360deg);
+}
+@media (min-width: 1440px) {
+  .profileDescription span {
+    line-height: var(--line-xxl);
+    font-size: var(--text-xl);
   }
 }
